//Version 1.1.0
syntax = "proto3";

package test_jigs;

message test_jig_base{
  string jig_id = 1;
  string jig_serial_number = 2;
  string jig_software_version = 3;
  string timestamp = 4;
  string manufacturing_order_number = 5;
  bool test_result = 6;
  float test_duration = 7;

  oneof test_jig_type{
    app_test_can_wifi app_test_can_wifi = 50;
    app_test_eswitch_short_circuit app_test_eswitch_short_circuit = 51;
    app_test_cmm app_test_cmm = 52;
    app_test_cell_positions app_test_cell_positions = 53;
    app_test_soc app_test_soc = 54;
    app_test_gsm_modem app_test_gsm_modem = 55;
    app_test_eswitch_assembled app_test_eswitch_assembled = 56;
    app_test_eswitch_drive app_test_eswitch_drive = 57;
    app_test_charge app_test_charge = 58;
    app_test_discharge app_test_discharge = 59;
    app_test_bem app_test_bem = 60;
    app_test_battery_config app_test_battery_config = 61;
  }
}

message app_test_can_wifi{
  string mac_address = 1; //Index
  float current_5v_off = 2;
  float voltage_5v_off = 3;
  float current_5v_on = 4;
  float voltage_5v_on = 5;
  bool program_status = 6;
  bool uart = 7;
  bool can = 8;
  bool wifi = 9;
  float current_iso_load = 10;
  float voltage_iso_load = 11;
  float current_iso_noload = 12;
  float voltage_iso_noload = 13;
  string esp_tool_version = 14;
}

message app_test_eswitch_short_circuit {
  string serial_number = 1; //Index
  string board_variant = 2;
  float short_circuit_current = 3;
  float voltage_cap_start = 4;
  float eswitch_drive_power_psu_off = 5;
  float eswitch_drive_power_dut_off = 6;
  float eswitch_drive_power_cap_off = 7;
  float eswitch_drive_power_psu_on = 8;
  float eswitch_drive_power_dut_on = 9;
  float eswitch_drive_power_cap_on = 10;
  float eswitch_drive_power_dut_short = 11;
}

message app_test_cmm{
  string cmm_uid = 1; //Index
  string firmware_version = 2;
  string test_type = 3;
  float f01_intvref_iniitial_lvl = 4;
  float f02_intvref_rise_time = 5;
  float f03_inttemp_initial_level = 6;
  float f04_vcc_test_level = 7;
  float a01_pa6_to_a12_rise = 8;
  float a02_pa6_to_a12_fall = 9;
  float a03_pa6_to_a9_rise = 10;
  float a04_pa6_to_a9_fall = 11;
  float b01_external_cmp = 12;
  float b02_internal_cmp = 13;
  float b03_pb6_to_pa10_rise = 14;
  float b04_pb6_to_pa10_fall = 15;
  float b05_pb6_to_comp1_inp_idle = 16;
  float b06_pb6_to_comp1_inm_idle = 17;
  float b07_pb6_to_comp1_inp_comms = 18;
  float b08_pb6_to_comp1_inm_comms = 19;
  float b09_pb6_to_comp1_inp_asw = 20;
  float b10_pb6_to_comp1_inm_asw = 21;
  float c11_pa7_to_pa1_high_level = 22;
  float c12_pa7_to_pa1_bias_time = 23;
  float c13_pa8_to_pa0_low_level = 24;
  float c14_pa8_to_pa0_bias_time = 25;
  float d01_therm1_rise_time = 26;
  float d02_therm1_static_level = 27;
  float d03_therm2_rise_time = 28;
  float d04_therm2_static_level = 29;
  float d05_inttemp_static_level = 30;
  float d06_intvref_static_level = 31;
  float e01_v_cell_off_level = 32;
  float e02_v_cell_on_init_level = 33;
  float e03_v_lpf_init_level = 34;
  float e04_v_cell_on_bal_on_level = 35;
  float e05_v_cell_after5ms_level = 36;
  float e06_v_cell_off_level = 37;
  float e07_v_cell_after35ms_level = 38;
  float e08_v_cell_loaded_level = 39;
  float e09_v_cell_unloaded_level = 40;
  float e10_v_lpf_final_level = 41;
  float comms_resistance = 42;
  float g0_current = 43;
  float redled_current = 44;
  float blueled_current = 45;
  float cyanled_current = 46;
  float yellowled_current = 47;
  float balance_resistance = 48;
  float vcell_fast_coeffdetermination = 49;
  float vcell_fast_slope = 50;
  float vcell_fast_intercept = 51;
  float vcell_slow_coeffdetermination = 52;
  float vcell_slow_slope = 53;
  float vcell_slow_intercept = 54;
  repeated float uvlo_test = 55;
  repeated float diode_test = 56;
  float input_c = 57;
  float vcc_cap = 58;
  float tvs_v = 59;
  string final_flash_config = 60;
}

message app_test_cell_positions{
  string battery_serial_number = 1; //Index
  string cell_serial_number = 2;
  int32 position = 3;
  bool parallel = 4;
  string parallel_position = 5;
}

message app_test_soc{
  string uid = 1; //Index
  float inverse_display_power = 2;
  float oled_display_power = 3;
  float oled_all_on_power = 4;
  float oled_display_53_power = 5;
  float red_led_power = 6;
  float blue_led_power = 7;
  float buzzer_power = 8;
  float oled_off_power = 9;
}

message app_test_gsm_modem{
  string modem_imei = 1; //Index
  string iccid = 2; //Index
  bool iccid_registered = 3;
}

message app_test_eswitch_assembled{
  string serial_number = 1; //Index
  string board_variant = 2;
  string qr_code = 3;
  int32 protector_voltage = 4;
  float resistance = 5;
  bool led_check = 6;
  bool default_pass = 7;
  bool uvt_pass = 8;
  bool uvr_pass = 9;
  bool ovt_pass = 10;
  bool ovr_pass = 11;
  bool diode_pass = 12;
}

message app_test_eswitch_drive{
  string serial_number = 1; //Index
  string board_varaint = 2;
  int32 protector_voltage = 3;
  float board_resistance = 4;
  float voltage_10v_ls = 5;
  float voltage_10v_both_blue = 6;
  float voltage_5v = 7;
  float voltage_gate_low_side = 8;
  float voltage_gate_high_side = 9;
  float under_voltage_trip = 10;
  float under_voltage_reset = 11;
  float over_voltage_threshold = 12;
  float over_voltage_reset = 13;
  bool short_circuit_trip = 14;
  bool short_circuit_leds = 15;
  bool thermistor_present = 16;
  float temp_ambient = 17;
  float recharge_resistance = 18;
  float ten_v_rail = 19;
  float ten_v_rail_w_low_side_gate_over_temp = 20;
  float ten_v_rail_over_temp = 21;
  float ten_v_rail_short_circuit = 22;
  bool under_voltage_lvl_range = 23;
  bool over_voltage_lvl_range = 24;
  float over_temp_trip_temp = 25;
  float over_temp_reset_temp = 26;
  float over_temp_trip_time_1 = 27;
  float over_temp_reset_1 = 28;
  float over_temp_trip_time_2 = 29;
  float over_temp_trip_reset_2 = 30;
  bool led_present = 31;
  bool blue_low_side = 32;
  bool blue_high_side = 33;
  bool green = 34;
  bool over_voltage = 35;
  bool over_temp = 36;
}

message app_test_charge{
  string battery_serial_number = 1; //Index
  bool balanced = 2;
  float coulombs = 3;
}

message app_test_discharge{
  string battery_serial_number = 1; //Index
  bool condition_90 = 2;
  float coulombs_90 = 3;
  bool conditions_30 = 4;
  float coulombs_30 = 5;
}

message app_test_bem{
  string bem_uid = 1; //Index
  int32 bem_id = 2;
  string firmware_version = 3;

  bool buzzer_present = 20;
  //BEM Accelerometer
  bool test_result_accelerometer=51;
  float test_duration_accelerometer=52;
  float x_axis_accelerometer = 53;
  float y_axis_accelerometer = 54;
  float z_axis_accelerometer = 55;
  //BEM CAN
  bool test_result_can_bem = 101;
  float test_duration_can_bem = 102;
  bool module_present_can_bem = 103;
  string can_mac_bem_can_bem = 104;
  float i_240r_load_can_bem = 105;
  float v_240r_load_can_bem = 106;
  float v_no_load_can_bem = 107;
  //BEM CMM COMMS
  bool test_result_cmm_comms = 151;
  float test_duration_cmm_comms = 152;
  bool transformer_detected_cmm_comms = 153;
  repeated float rssi_cmm_comms = 154;
  //BEM EEPROM
  bool test_result_eeprom_bem = 201;
  float test_duration_eeprom_bem = 202;
  string initial_eeprom_page_value_eeprom_bem = 203;
  bool eeprom_write_command_eeprom_bem = 204;
  string eeprom_value_read_back_eeprom_bem = 205;
  string eeprom_write_success_eeprom_bem = 206;
  //BEM GSM
  bool test_result_gsm_bem = 251;
  float test_duration_gsm_bem = 252;
  string imei_gsm_bem = 253;
  string iccid_gsm_bem = 254;
  bool module_present_gsm_bem = 255;
  float gsm_signal_quality_gsm_bem = 256;
  //BEM ISO UART
  bool test_result_iso_uart = 301;
  float test_duration_iso_uart = 302;
  float unloaded_serial_isolated_port_voltage_iso_uart = 303;
  float loaded_serial_isolated_port_voltage_iso_uart = 304;
  float loaded_serial_isolated_port_current_iso_uart = 305;
  float loaded_serial_isolated_port_power_iso_uart = 306;
  //BEM LEDS
  bool test_result_leds_bem = 351;
  float test_duration_leds_bem = 352;
  bool energy_bar_leds_bem = 353;
  bool red_led_leds_bem = 354;
  bool strobe_led_leds_bem = 355;
  bool blue_led_leds_bem = 356;
  //BEM PROTECTOR/ESWITCH
  bool test_result_protector_drive_bem = 401;
  float test_duration_protector_drive_bem = 402;
  float v_no_load_protector_drive_bem = 403;
  float v_2k7_load_protector_drive_bem = 404;
  float i_2k7_load_protector_drive_bem = 405;
  //BEM SD Card
  bool test_result_sd_card_bem = 451;
  float test_duration_sd_card_bem = 452;
  string init_sd_status_sd_card_bem = 453;
  string init_fs_status_sd_card_bem = 454;
  bool sd_write_sd_card_bem = 455;
  bool sd_read_sd_card_bem = 456;
  string final_sd_status_sd_card_bem = 457;
  string final_fs_status_sd_card_bem = 458;
  //BEM Temperature
  bool test_result_temperature_bem = 501;
  float test_duration_temperature_bem = 502;
  float temp_external_temperature_bem = 503;
  float temp_internal_temperature_bem = 504;
  float temp_shunt_temperature_bem = 505;
  //BEM Calibration
  bool test_result_calibration_bem = 551;
  float test_duration_calibration_bem = 552;
  float test_0_v_calibration_bem = 553;
  float test_0_i_calibration_bem = 554;
  float meas_0_v_ch0_calibration_bem = 555;
  float meas_0_v_ch1_calibration_bem = 556;
  float meas_0_i_ch0_calibration_bem = 557;
  float meas_0_i_ch1_calibration_bem = 558;
  float test_1_v_calibration_bem = 559;
  float test_1_i_calibration_bem = 560;
  float meas_1_v_ch0_calibration_bem = 561;
  float meas_1_v_ch1_calibration_bem = 562;
  float meas_1_i_ch0_calibration_bem = 563;
  float meas_1_i_ch1_calibration_bem = 564;
  float current_ch0_gain_calibration_bem = 565;
  float current_ch1_gain_calibration_bem =566;
  float current_ch0_offset_calibration_bem = 567;
  float current_ch1_offset_calibration_bem = 568;
  float voltage_ch0_gain_calibration_bem = 569;
  float voltage_ch1_gain_calibration_bem = 570;
  float voltage_ch0_offset_calibration_bem = 571;
  float voltage_ch1_offset_calibration_bem = 572;

}
 //Basic Details first 50
message app_test_battery_config{

  string battery_serial_number = 1; //Index
  string variant_code =2;
  string assembler = 3;
  int32 name_plate_capacity = 4;
  bool eswitch_control = 5;
  int32 usable_coulomb_capacity = 6;
  int32 bem_id = 7;
  string bem_uid = 8;
  int32 num_cells = 9;
  int32 num_cmms = 10;
  string bem_variant_code = 12;
  int32 fuse = 13;
  bool shunt_direction= 14;
  int32 protector_serial = 15;
  string bem_firmware_version = 16;
  string bem_software_version = 17;
  int32 bem_hardware_version = 18;
  bool loaded_onto_portal = 19;
  //Config and monitor 51 onwards
  bool cmm_rssi_values = 51;
  bool can_enable = 52;
  bool gsm_enable = 53;
  bool gsm_connect = 54;
  bool bem_ram_batt_config =55;
  bool bem_ram_bem_cell_config = 56;
  bool bem_flash_batt_config = 57;
  bool bem_flah_bem_cell_config = 58;
  bool flash_config_cmms = 59;
  bool ram_congif_cmms = 60;
  bool addresses_cmm = 61;
  bool config_success = 62;

  //Config Data 101 onwards
  float v_pack_OV_trip = 101;
  float v_pack_OV_reset = 102;
  float v_pack_q_in_trip = 103;
  float v_pack_q_in_reset = 104;
  float v_pack_q_read_trip = 105;
  float v_pack_q_read_reset = 106;
  float v_pack_UV_trip = 107;
  float v_pack_UV_reset = 108;
  float v_pack_full_warn_trip = 109;
  float v_pack_full_warn_reset = 110;
  float v_pack_flat_warn_trip = 111;
  float v_pack_flat_warn_reset = 112;
  float v_cell_UV_trip = 113;
  float v_cell_UV_reset = 114;
  float v_cell_q_read_trip = 115;
  float v_cell_q_read_reset = 116;
  float v_cell_OV_trip = 117;
  float v_cell_OV_reset = 118;
  float soc_low_trip_fraction = 119;
  float soc_low_trip = 120;
  float soc_low_reset_fraction = 121;
  float soc_low_reset = 122;
  float k_cell_OT_trip = 123;
  float k_cell_OT_reset = 124;
  float k_cell_UT_trip = 125;
  float k_cell_UT_reset = 126;
  float k_shunt_OT_trip = 127;
  float k_shunt_OT_reset = 128;
  float k_shunt_UT_trip = 129;
  float k_shunt_UT_reset = 130;
  float k_probe_OT_trip = 131;
  float k_probe_OT_reset = 132;
  float k_probe_UT_trip = 133;
  float k_probe_UT_reset = 134;
  float q_out_flat_limit = 135;
  float q_out_bulk_limit = 136;
  float q_in_float_limit = 137;
  float q_in_bulk_limit = 138;
  float q_read_trigger = 139;
  float t_q_in_limit = 140;
  float t_q_out_limit = 141;
  float t_read_trigger = 142;
  float t_guard_limit = 143;

  //SOC 201 onwards
  repeated float cell_v_min = 201;
  repeated float cell_v_max = 202;
  repeated float soc_min_fraction = 203;
  repeated float soc_min = 204;
  repeated float soc_max_fraction = 205;
  repeated float soc_max = 206;

  //Monitor Configs 251 onwards
  bool balance_enabled = 251;
  int32 average_window = 252;
  float warn_temperature_high = 253;
  float warn_cell_voltage_low = 254;
  float warn_cell_voltage_high = 255;
  float limit_cell_balance_low = 256;
  float limit_cell_balance_high = 257;

  //CMMS 301 onwards
  repeated string cmm_uid = 301;
  repeated bool test_result_balance = 302;
  repeated float dk_div_p_balance = 303;
  repeated float voltage_balance = 304;
  repeated float power_balance = 305;
  repeated float rssi_readings = 306;
}
